--- a/views/tool.handlebars
+++ b/views/tool.handlebars
@@ -135,6 +135,7 @@
     var yCoord = new Array();
     var path = "http://35.163.48.45:8888/laskaactivations/";
 
+    console.log("{{{dataFileName}}}")
     d3.json("{{{dataFileName}}}", function(error, data) {
         if (error) {  //If error is not null, something went wrong.
             console.log(error);  //Log the error.
