--- a/views/tool.handlebars
+++ b/views/tool.handlebars
@@ -105,6 +105,8 @@
 
 <body>
 <script>
+    var pathToBackpropagationImages = "http://35.163.48.45:8888/laskaback/";
+    var pathToActivationsImages = "http://35.163.48.45:8888/laskaactivations/";
     var sideBarWidth = 300;
     var sideBarHeight = 300;
     var labelHeigth = 50;
@@ -133,7 +135,7 @@
     var rowHeight = nodeWidth + (Margin * 2);
     var xCoord = new Array();
     var yCoord = new Array();
-    var path = "http://35.163.48.45:8888/laskaactivations/";
+    var path = pathToActivationsImages;
 
     console.log("{{{dataFileName}}}")
     d3.json("tool/data/{{{dataFileName}}}", function(error, data) {
@@ -380,7 +382,7 @@
         var numFilters = d.Children.length;
         var filtersPerRow = Math.ceil( Math.sqrt(numFilters) );//square of this number is the number of mini squares we have
         var filterWidth = detailWidth / filtersPerRow;
-        var path = "http://35.163.48.45:8888/laskaback/";
+        var path = pathToBackpropagationImages;
         sideBar.attr("height", sideBarHeight * 3 - 35);
         if (!d.Children){return;}//DON'T Show anything if there is no filters
         //remove all the buttons and filters in detail panel
@@ -399,7 +401,7 @@
                 .attr('name', 'toggle')
                 .on('click', function () {
                     //Do something
-                    path = "http://35.163.48.45:8888/laskaback/";
+                    path = pathToBackpropagationImages;
                     detail.selectAll(".filters")
                             .attr("xlink:href",  function(d) { return path + d.img;});
                 });
@@ -412,7 +414,7 @@
                 .attr('name', 'toggle')
                 .on('click', function () {
                     //Do something
-                    path = "http://35.163.48.45:8888/laskaactivations/";
+                    path = pathToActivationsImages;
                     detail.selectAll(".filters")
                             .attr("xlink:href",  function(d) { return path + d.img;});
                 });
@@ -450,10 +452,10 @@
                     sideBar.append("svg:image")
                             .attr("class", "tooltip")
                             .attr("xlink:href",  function(d) {
-                                if(path == "http://35.163.48.45:8888/laskaback/"){
-                                    var path_ = "http://35.163.48.45:8888/laskaactivations/";
+                                if(path == pathToBackpropagationImages){
+                                    var path_ = pathToActivationsImages;
                                 } else {
-                                    path_ = "http://35.163.48.45:8888/laskaback/";
+                                    path_ = pathToBackpropagationImages;
                                 }
                                 return path_ + imageName;})
                             .attr("x", Margin)
