links to back and act as variables3

--- a/views/tool.handlebars
+++ b/views/tool.handlebars
@@ -105,8 +105,8 @@
 
 <body>
 <script>
-    var pathToBackpropagationImages = "http://35.163.48.45:8888/laskaback/";
-    var pathToActivationsImages = "http://35.163.48.45:8888/laskaactivations/";
+    var pathToBackpropagationImages = "{{{backPath}}}";
+    var pathToActivationsImages = "{{{actPath}}}";
     var sideBarWidth = 300;
     var sideBarHeight = 300;
     var labelHeigth = 50;
