all Fields Working Dynamically

--- a/views/lunch.handlebars
+++ b/views/lunch.handlebars
@@ -9,12 +9,12 @@
 
     <div>
             <label>Link To BackPrp Images: </label>
-            <input type="text" name="back_link" value="Link To Back Method Images">
+            <input type="text" name="back_link" value="http://35.163.48.45:8888/laskaback/">
     </div>
 
     <div>
             <label>Link To Activation Images: </label>
-            <input type="text" name="act_link" value="Link To Activation Method Images">
+            <input type="text" name="act_link" value="http://35.163.48.45:8888/laskaactivations/">
     </div>
 
 
