--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Mahdi's CNN Vis Tool</title>
 
     <!-- Bootstrap core CSS -->
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -29,6 +29,14 @@
 
   <body>
 
+
+
+
+
+
+
+
+
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -37,28 +45,64 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Documentation</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
+		
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-          </div>
+
+	<div>
+		<h1><br>Convolutional Neural Networks Visualization Tool</h1>
+
+
+		<hr>
+			<h3>Upload your own Conv Network  here:</h3>
+
+       			 <div>
+        		        <form id="regForm" method="post" enctype="multipart/form-data"  action="/">
+                		<label>Data File(.json): </label>
+                		<input type="file" name="description_file">
+        		</div>
+
+       			 <div>
+                		<input type="submit" value="Upload" class="btn btn-lg btn-default">
+        		</div>
+
+
+
+
+
+<hr>
+<h3>Or jump to lunching the tool:</h3>
+<form id="downloadForm2" method="get" enctype="multipart/form-data"  action="/tool">
+    <div>
+            <input type="submit" value="TOOL" class="btn btn-lg btn-default">
+    </div>
+</form>
+
+
+
+
+
+
+</body>
+
+
+
+
+
+
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+     
+		   <p  align="left">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
             </div>
           </div>
 
@@ -74,8 +118,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="javascripts/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
 </html>
 
