--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,123 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<meta name="description" content="">
+		<meta name="author" content="">
 
-    <title>Mahdi's CNN Vis Tool</title>
+		<title>Mahdi's CNN Vis Tool</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
-
-    <!-- Custom styles for this template -->
-    <link href="stylesheets/cover.css" rel="stylesheet">
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
+		<!-- Custom styles for this template -->
+		<link href="stylesheets/cover.css" rel="stylesheet">
+ 	</head>
 
 
+	<body>
+
+		<div class="site-wrapper">
+			<div class="site-wrapper-inner">
+				<div class="cover-container">
+
+					<div class="masthead clearfix">
+						<div class="inner">
+							<h3 class="masthead-brand">Cover</h3>
+							<nav>
+								<ul class="nav masthead-nav">
+									<li class="active"><a href="#">Home</a></li>
+									<li><a href="#">Documentation</a></li>
+									<li><a href="#">Contact</a></li>
+								</ul>
+							</nav>
+						</div>
+					  </div>
+
+					<div class="inner cover">
+						<h1><br>Convolutional Neural Networks Visualization Tool</h1>
+						
+
+						<h5>Previously Uploaded Files:</h5>
+						{{#each uploadedFiles}}
+							<li>{{name}}</li>
+						{{/each}}
+						<hr>
+						
+
+						<h3>Upload your own Conv Network  here:</h3>
+						<form id="regForm" method="post" enctype="multipart/form-data"  action="/">
+							<label>Data File(.json): </label>
+							<input type="file" name="description_file">
+
+							<input type="submit" value="Upload" class="btn btn-lg btn-default">
+						</form>
+
+
+						<hr>
+						<h3>Or jump to lunching the tool:</h3>
+						<form id="downloadForm2" method="get" enctype="multipart/form-data"  action="/tool">
+								<input type="submit" value="TOOL" class="btn btn-lg btn-default">
+						</form>
+					</div>
 
 
 
+					<div class="mastfoot">
+						<div class="inner">
+							<p  align="left">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
+						</div>
+				  	</div>
 
+				</div>
 
+			</div>
 
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Documentation</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-		
-
-
-	<div>
-		<h1><br>Convolutional Neural Networks Visualization Tool</h1>
-
-
-		<hr>
-			<h3>Upload your own Conv Network  here:</h3>
-
-       			 <div>
-        		        <form id="regForm" method="post" enctype="multipart/form-data"  action="/">
-                		<label>Data File(.json): </label>
-                		<input type="file" name="description_file">
-        		</div>
-
-       			 <div>
-                		<input type="submit" value="Upload" class="btn btn-lg btn-default">
-        		</div>
-
-
-<h5>Previously Uploaded Files:</h5>
-{{#each uploadedFiles}}
-    <li>{{name}}</li>
-{{/each}}
-
-
-<hr>
-<h3>Or jump to lunching the tool:</h3>
-<form id="downloadForm2" method="get" enctype="multipart/form-data"  action="/tool">
-    <div>
-            <input type="submit" value="TOOL" class="btn btn-lg btn-default">
-    </div>
-</form>
+		</div>
 
 
 
 
+		<!-- Bootstrap core JavaScript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+		<script src="javascripts/bootstrap.min.js"></script>
 
-
-</body>
-
-
-
-
-
-
-
-          <div class="mastfoot">
-            <div class="inner">
-     
-		   <p  align="left">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="javascripts/bootstrap.min.js"></script>
+	</body>
 </html>
