--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -68,7 +68,7 @@
 
 					<div class="mastfoot">
 						<div class="inner">
-							<p  align="left">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
+							<p  align="middle">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
 						</div>
 				  	</div>
 
