--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,56 +23,86 @@
 		<div class="site-wrapper">
 			<div class="site-wrapper-inner">
 				<div class="cover-container">
-
-					<div class="masthead clearfix">
-						<div class="inner">
-							<h3 class="masthead-brand">Cover</h3>
-							<nav>
-								<ul class="nav masthead-nav">
-									<li class="active"><a href="#">Home</a></li>
-									<li><a href="#">Documentation</a></li>
-									<li><a href="#">Contact</a></li>
-								</ul>
-							</nav>
-						</div>
-					  </div>
-
 					<div class="inner cover">
-						<h1><br>Convolutional Neural Networks Visualization Tool</h1>
+
+						<div align="middle" class="nav mastfoot-nav">
+							<ul>
+								<font size='5px'>
+									<a href="#">Home</a>
+								</font>
+								<font size='5px'>
+									<a href="#">Documentation</a>
+								</font>
+								<font size='5px'>
+									<a href="#">Contact</a>
+								</font>
+							</ul>
+						</div>
+				
+			
+
+						<h1>Convolutional Neural Networks Visualization Tool</h1>
+						<br>
+						<hr>
 						
 
-						<h5>Previously Uploaded Files:</h5>
+						<h3>Previously Uploaded Files:</h3>
+						
 						{{#each uploadedFiles}}
 							<li>
       							<a href="/tool/data/{{name}}"><strong>{{name}}</strong></a>
     						</li>
 						{{/each}}
-						<hr>
 						
 
-						<h3>Upload your own Conv Network  here:</h3>
-						<form id="regForm" method="post" enctype="multipart/form-data"  action="/">
-							<label>Data File(.json): </label>
-							<input type="file" name="description_file">
+						
 
+						<h3>Upload your own ConvNet here:</h3>
+						
+						<form id="regForm" method="post" enctype="multipart/form-data"  action="/">
+							<input type="file" name="description_file">
+							<br>
 							<input type="submit" value="Upload" class="btn btn-lg btn-default">
 						</form>
+						
+						<p><br></p>
 
 
 						<hr>
+
+
 						<h3>Or jump to lunching the tool:</h3>
-						<form id="downloadForm2" method="get" enctype="multipart/form-data"  action="/tool">
-								<input type="submit" value="TOOL" class="btn btn-lg btn-default">
+						<br>
+						<form id="downloadForm2" method="post" action="/tool">
+							
+							<label>Json File Name: </label>
+							<font color='black'><input type="text" name="data_file_name" value="data.json"></font>
+
+							
+							 <p><br></p>
+							 <label>Link To BackPrp Images: </label>
+							 <font color='black'><input type="text" name="back_link" value="http://35.163.48.45:8888/laskaback/"></font>
+
+							 <p><br></p>
+							 <label>Link To Activation Images: </label>
+							 <font color='black'><input type="text" name="act_link" value="http://35.163.48.45:8888/laskaactivations/"></font>
+
+							 <p><br></p>
+							 <input type="submit" value="LUNCH" class="btn btn-lg btn-default">
+
 						</form>
-					</div>
+						
 
-
-
-					<div class="mastfoot">
-						<div class="inner">
+						<p><br></p>
+						<hr>
+						<div align="middle" class="nav mastfoot-nav">
+							<p><br></p>
 							<p  align="middle">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
+						
 						</div>
-				  	</div>
+
+					  	
+					</div>
 
 				</div>
 
