Final FrontEnd Design And Stylings

--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -100,7 +100,7 @@ body {
     float: left;
   }
   .masthead-nav {
-    float: right;
+    float: centre;
   }
 }
 
@@ -143,7 +143,7 @@ body {
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
-    vertical-align: middle;
+    vertical-align: top;
   }
   /* Handle the widths */
   .masthead,
