--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,24 +23,21 @@
 		<div class="site-wrapper">
 			<div class="site-wrapper-inner">
 				<div class="cover-container">
-					<div class="inner cover">
+					<div class="inner cover">	
 
-						<div align="middle" class="nav mastfoot-nav">
-							<ul>
-								<font size='5px'>
-									<a href="#">Home</a>
-								</font>
-								<font size='5px'>
-									<a href="#">Documentation</a>
-								</font>
-								<font size='5px'>
-									<a href="#">Contact</a>
-								</font>
+						
+						<nav>
+							<ul class="nav masthead-nav">
+								
+								<li class="active"><a href="#">Home</a></li>
+								<li><a href="#">Documentation</a></li>
+								<li><a href="#">Contact</a></li>
+
 							</ul>
-						</div>
-				
-			
+						</nav>
 
+
+						<br>
 						<h1>Convolutional Neural Networks Visualization Tool</h1>
 						<br>
 						<hr>
@@ -65,10 +62,11 @@
 							<input type="submit" value="Upload" class="btn btn-lg btn-default">
 						</form>
 						
+
+
 						<p><br></p>
-
-
 						<hr>
+
 
 
 						<h3>Or jump to lunching the tool:</h3>
@@ -93,14 +91,17 @@
 						</form>
 						
 
+
 						<p><br></p>
 						<hr>
-						<div align="middle" class="nav mastfoot-nav">
-							<p><br></p>
-							<p  align="middle">&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</p>
-						
-						</div>
 
+
+						<nav>
+							<ul class="nav masthead-nav">
+								<li><font color='#A4A4A4'>&copy; Copyright Mahdi Ghodsi. 2017 All Rights Reserved</font></li>
+							</ul>
+						</nav>
+						
 					  	
 					</div>
 
