--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
 						<hr>
 						
 
-						<h3>Previously Uploaded Files:</h3>
+						<h3>Previously Uploaded ConvNets:</h3>
 						
 						{{#each uploadedFiles}}
 							<li>
@@ -69,11 +69,11 @@
 
 
 
-						<h3>Or jump to lunching the tool:</h3>
+						<h3>Or jump to launching the tool:</h3>
 						<br>
 						<form id="downloadForm2" method="post" action="/tool">
 							
-							<label>Json File Name: </label>
+							<label>ConvNet File Name: </label>
 							<font color='black'><input type="text" name="data_file_name" value="data.json"></font>
 
 							
@@ -86,7 +86,7 @@
 							 <font color='black'><input type="text" name="act_link" value="http://35.163.48.45:8888/laskaactivations/"></font>
 
 							 <p><br></p>
-							 <input type="submit" value="LUNCH" class="btn btn-lg btn-default">
+							 <input type="submit" value="LAUNCH" class="btn btn-lg btn-default">
 
 						</form>
 						
