--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -75,17 +75,20 @@
 							
 							<label>ConvNet File Name: </label>
 							<font color='black'><input type="text" name="data_file_name" value="data.json"></font>
+							<p><br></p>
 
+							<label>Output File Name: </label>
+							<font color='black'><input type="text" name="output_file_name" value="prob.json"></font>
+							<p><br></p>
 							
-							 <p><br></p>
-							 <label>Link To BackPrp Images: </label>
-							 <font color='black'><input type="text" name="back_link" value="http://35.163.48.45:8888/laskaback/"></font>
+							<label>Link To BackPrp Images: </label>
+							<font color='black'><input type="text" name="back_link" value="http://35.163.48.45:8888/laskaback/"></font>
+							<p><br></p>
+							
+							<label>Link To Activation Images: </label>
+							<font color='black'><input type="text" name="act_link" value="http://35.163.48.45:8888/laskaactivations/"></font>
+							<p><br></p>
 
-							 <p><br></p>
-							 <label>Link To Activation Images: </label>
-							 <font color='black'><input type="text" name="act_link" value="http://35.163.48.45:8888/laskaactivations/"></font>
-
-							 <p><br></p>
 							 <input type="submit" value="LAUNCH" class="btn btn-lg btn-default">
 
 						</form>
