--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Mahdi's CNN Vis Tool</title>
+		<title>ConvLens</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,9 @@
 
 
 						<br>
-						<h1>Convolutional Neural Networks Visualization Tool</h1>
+						<h1>ConvLens:</h1>
+						<h1>Visualizing Convolution Neural Networks</h1>
+						<br>
 						<br>
 						<hr>
 						
@@ -68,6 +70,7 @@
 
 
 						<p><br></p>
+						<br>
 						<hr>
 
 
